@@ -12,6 +12,10 @@ Fixed bug in last resort temporary directory creation.
 
 Fixed off-by-one in exit value for scripts caught by the trap handler.
 
+Added error checking for assertTrue().
+
+Added mkdir_test.sh example.
+
 
 Changes with 2.1.3
 ------------------
